# chatbot-rag

./: .env.modelo  .gitignore  pyproject.toml
chatbot_rag/: app.py  azure_client_helper.py  chatbot.py  chatbot_com_rag.py  common.py  vector_store_helper.py
configs/: logging.toml
