[tool.poetry]
name = "chatbot-rag"
version = "0.1.0"
description = ""
authors = ["eng-alecrim <lucasalecrimvieira@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
python-dotenv = "^1.0.1"
pyyaml = "^6.0.1"
langchain = "^0.2.10"
langchain-openai = "^0.1.17"
tiktoken = "^0.7.0"
streamlit = "^1.36.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.1"
pytest-cov = "^5.0.0"
taskipy = "^1.13.0"
ruff = "^0.5.4"
ignr = "^2.2"
black = "^24.4.2"
jupyterlab = "^4.2.4"
catppuccin-jupyterlab = "^0.2.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
